--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
        <div class="resume_item resume_info">
          <div class="title">
            <p class="bold">Nguyen Doan Thanh Chuong</p>
-           <p class="regular">Developer, System Engineer</p>
+           <p class="regular">Developer, Network, System </p>
          </div>
          <ul>
            <li>
