--- a/index.html
+++ b/index.html
@@ -164,7 +164,7 @@
         <div class="title">
            <p class="bold">About us</p>
          </div>
-        <p class="semi-bold">Passionate, hard-working, willing to learn, Enthusiastic, Have a positive attitude and a high sense of responsibility.</p>
+        <p class="semi-bold">Passionate, hard-working, willing to learn, Enthusiastic, Have a positive attitude and a high sense of responsibility...</p>
     </div>
     <!-- <div class="resume_item resume_work">
         <div class="title">
