--- a/index.html
+++ b/index.html
@@ -72,7 +72,7 @@
                CSS
              </div>
              <div class="skill_progress">
-               <span style="width: 50%;"></span>
+               <span style="width: 40%;"></span>
              </div>
              <div class="skill_per"></div>
            </li>
@@ -81,7 +81,7 @@
                JS
              </div>
              <div class="skill_progress">
-               <span style="width: 50%;"></span>
+               <span style="width: 30%;"></span>
              </div>
              <div class="skill_per"></div>
            </li>
@@ -207,7 +207,7 @@
                 </div>
             </li>
             <li>
-              <div class="date">2018 - 2022</div>
+              <div class="date">2018 - now</div>
               <div class="info">
                      <p class="semi-bold"> Ho Chi Minh University of Information Technology  </p> 
                   <p>Junior <br> Major: Faculty of computer networks and communications</p>
