--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
        <div class="resume_item resume_info">
          <div class="title">
            <p class="bold">Nguyen Doan Thanh Chuong</p>
-           <p class="regular"> Intern Linux, Network </p>
+           <p class="regular">Intern Network, Linux </p>
          </div>
          <ul>
            <li>
@@ -63,7 +63,7 @@
                HTML
              </div>
              <div class="skill_progress">
-               <span style="width: 50%;"></span>
+               <span style="width: 70%;"></span>
              </div>
              <div class="skill_per"></div>
            </li>
@@ -72,19 +72,19 @@
                CSS
              </div>
              <div class="skill_progress">
-               <span style="width: 40%;"></span>
+               <span style="width: 60%;"></span>
              </div>
              <div class="skill_per"></div>
            </li>
-           <li>
+           <!-- <li>
              <div class="skill_name">
                JS
              </div>
              <div class="skill_progress">
-               <span style="width: 30%;"></span>
+               <span style="width: 50%;"></span>
              </div>
              <div class="skill_per"></div>
-           </li>
+           </li> -->
            <li>
              <div class="skill_name">
                C#
@@ -99,13 +99,22 @@
                C++
              </div>
              <div class="skill_progress">
-               <span style="width: 50%;"></span>
+               <span style="width: 60%;"></span>
              </div>
              <div class="skill_per"></div>
            </li>
            <li>
             <div class="skill_name">
               LINUX
+            </div>
+            <div class="skill_progress">
+              <span style="width: 60%;"></span>
+            </div>
+            <div class="skill_per"></div>
+          </li>
+          <li>
+            <div class="skill_name">
+              Technical English and Communication
             </div>
             <div class="skill_progress">
               <span style="width: 50%;"></span>
@@ -162,49 +171,58 @@
   <div class="resume_right">
     <div class="resume_item resume_about">
         <div class="title">
-           <p class="bold">About us</p>
+           <p class="bold">CAREER GOAL</p>
          </div>
-        <p class="semi-bold">Passionate, hard-working, willing to learn, enthusiastic, have a positive attitude and a high sense of responsibility...</p>
+        <p class="semi-bold">I am a person who’s not afraid of failures so when I'm determined to do 
+          something I put my whole ability, responsibility and dedication to bring 
+          the most complete results. The development of the company, the satisfaction of
+          customers and the improvement of myself are my top priority in my career.
+          With all my energy and my up coming experience with the company, I hope to
+          reach more significant milestones in my career in the next 2 years. It is the
+          motivation for me to become an expert in the field that I am pursuing and
+          contribute to help the company reach newheights.</p>
     </div>
-    <!-- <div class="resume_item resume_work">
+    <div class="resume_item resume_work">
         <div class="title">
            <p class="bold">Work Experience</p>
          </div>
         <ul>
             <li>
-                <div class="date">2022 - 2023</div> 
+                <!-- <div class="date">2022 - 2023</div>  -->
                 <div class="info">
-                     <p class="semi-bold">Lorem ipsum dolor sit amet.</p> 
-                  <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Nostrum, voluptatibus!</p>
+                  <h1>Freshman at University</h1> <br>
+                  <p class="semi-bold">- Join ICPC tournament <br> - Member of TU SACH NHAN AI 
+                  <br>- Created http://comchaudoc.com.vn/ website and my personal blog by Wordpress
+                  </p>
                 </div>
             </li>
             <li>
-              <div class="date">2023 - 2024</div>
+              <!-- <div class="date">2023 - 2024</div> -->
               <div class="info">
-                     <p class="semi-bold">Lorem ipsum dolor sit amet.</p> 
-                  <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Nostrum, voluptatibus!</p>
+                <h1>Sophomore at University </h1> <br>
+                     <p class="semi-bold">- Join  NetDev club of University of Information Technology <br> - Attend CTF WannaGame UIT  <br> - Make class projects and private projects on Github  </p>
                 </div>
             </li>
             <li>
-              <div class="date">2024 - Present</div>
+              <!-- <div class="date">2024 - Present</div> -->
               <div class="info">
-                     <p class="semi-bold">Lorem ipsum dolor sit amet.</p> 
-                  <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Nostrum, voluptatibus!</p>
-                </div>
+                     <!-- <p class="semi-bold">Lorem ipsum dolor sit amet.</p>  -->
+                  <!-- <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Nostrum, voluptatibus!</p> -->
+                </div>  
             </li>
         </ul>
-    </div> -->
+    </div>
     <div class="resume_item resume_education">
       <div class="title">
            <p class="bold">Education</p>
          </div>
       <ul>
             <li>
-                <div class="date">2015 - 2018</div> 
+                <!-- <div class="date">2015 - 2018</div> 
                 <div class="info">
                      <p class="semi-bold">An Nhon 2 High School</p> 
                   <p>Graduated</p>
-                </div>
+                </div> -->
             </li>
             <li>
               <div class="date">2018 - now</div>
