--- a/index.html
+++ b/index.html
@@ -182,6 +182,27 @@
           motivation for me to become an expert in the field that I am pursuing and
           contribute to help the company reach newheights.</p>
     </div>
+    <div class="resume_item resume_education">
+      <div class="title">
+           <p class="bold">Education</p>
+         </div>
+      <ul>
+            <li>
+                <!-- <div class="date">2015 - 2018</div> 
+                <div class="info">
+                     <p class="semi-bold">An Nhon 2 High School</p> 
+                  <p>Graduated</p>
+                </div> -->
+            </li>
+            <li>
+              <div class="date">2018 - now</div>
+              <div class="info">
+                     <p class="semi-bold"> Ho Chi Minh University of Information Technology  </p> 
+                  <p>Sophomore <br> Major: Faculty of computer networks and communications</p>
+                </div>
+            </li>
+        </ul>
+    </div>
     <div class="resume_item resume_work">
         <div class="title">
            <p class="bold">Work Experience</p>
@@ -212,27 +233,7 @@
             </li>
         </ul>
     </div>
-    <div class="resume_item resume_education">
-      <div class="title">
-           <p class="bold">Education</p>
-         </div>
-      <ul>
-            <li>
-                <!-- <div class="date">2015 - 2018</div> 
-                <div class="info">
-                     <p class="semi-bold">An Nhon 2 High School</p> 
-                  <p>Graduated</p>
-                </div> -->
-            </li>
-            <li>
-              <div class="date">2018 - now</div>
-              <div class="info">
-                     <p class="semi-bold"> Ho Chi Minh University of Information Technology  </p> 
-                  <p>Junior <br> Major: Faculty of computer networks and communications</p>
-                </div>
-            </li>
-        </ul>
-    </div>
+    
     <div class="resume_item resume_hobby">
       <div class="title">
            <p class="bold">Hobby</p>
