--- a/index.html
+++ b/index.html
@@ -1,253 +1,291 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
-	<meta charset="UTF-8">
-	<title>Resume/CV Design</title>
-	<link rel="stylesheet" href="style.css">
-	<script src="https://kit.fontawesome.com/b99e675b6e.js"></script>
+  <meta charset="UTF-8">
+  <title>Resume/CV Design</title>
+  <link rel="stylesheet" href="style.css">
+  <script src="https://kit.fontawesome.com/b99e675b6e.js"></script>
 </head>
+
 <body>
-<div class="resume">
-   <div class="resume_left">
-     <div class="resume_profile">
-        <img width="200px" height="100px" src="cv chuong.jpg"/>
-     </div>
-     <div class="resume_content">
-       <div class="resume_item resume_info">
-         <div class="title">
-           <p class="bold">Nguyen Doan Thanh Chuong</p>
-           <p class="regular">Intern Network, Linux </p>
-         </div>
-         <ul>
-           <li>
-             <div class="icon">
-               <i class="fas fa-map-signs"></i>
-             </div>
-             <div class="data">
-               Thu Duc, Ho Chi Minh <br /> Viet Nam
-             </div>
-           </li>
-           <li>
-             <div class="icon">
-               <i class="fas fa-mobile-alt"></i>
-             </div>
-             <div class="data">
-               +84339413276
-             </div>
-           </li>
-           <li>
-             <div class="icon">
-               <i class="fas fa-envelope"></i>
-             </div>
-             <div class="data">
-               nguyenchuongbep@gmail.com
-             </div>
-           </li>
-           <li>
-             <div class="icon">
-               <i class="fab fa-weebly"></i>
-             </div>
-             <div class="data">
+  <div class="resume">
+    <div class="resume_left">
+      <div class="resume_profile">
+        <img width="200px" height="100px" src="cv chuong.jpg" />
+      </div>
+      <div class="resume_content">
+        <div class="resume_item resume_info">
+          <div class="title">
+            <p class="bold">Nguyen Doan Thanh Chuong</p>
+            <p class="regular">Intern Network, Linux </p>
+          </div>
+          <ul>
+            <li>
+              <div class="icon">
+                <i class="fas fa-map-signs"></i>
+              </div>
+              <div class="data">
+                Thu Duc, Ho Chi Minh <br /> Viet Nam
+              </div>
+            </li>
+            <li>
+              <div class="icon">
+                <i class="fas fa-mobile-alt"></i>
+              </div>
+              <div class="data">
+                +84339413276
+              </div>
+            </li>
+            <li>
+              <div class="icon">
+                <i class="fas fa-envelope"></i>
+              </div>
+              <div class="data">
+                nguyenchuongbep@gmail.com
+              </div>
+            </li>
+            <li>
+              <div class="icon">
+                <i class="fab fa-weebly"></i>
+              </div>
+              <div class="data">
                 https://chuongbep.design.blog/
-             </div>
-           </li>
-         </ul>
-       </div>
-       <div class="resume_item resume_skills">
-         <div class="title">
-           <p class="bold">skill's</p>
-         </div>
-         <ul>
-           <li>
-             <div class="skill_name">
-               HTML
-             </div>
-             <div class="skill_progress">
-               <span style="width: 70%;"></span>
-             </div>
-             <div class="skill_per"></div>
-           </li>
-           <li>
-             <div class="skill_name">
-               CSS
-             </div>
-             <div class="skill_progress">
-               <span style="width: 60%;"></span>
-             </div>
-             <div class="skill_per"></div>
-           </li>
-           <!-- <li>
-             <div class="skill_name">
-               JS
-             </div>
-             <div class="skill_progress">
-               <span style="width: 50%;"></span>
-             </div>
-             <div class="skill_per"></div>
-           </li> -->
-           <li>
-             <div class="skill_name">
-               C#
-             </div>
-             <div class="skill_progress">
-               <span style="width: 50%;"></span>
-             </div>
-             <div class="skill_per"></div>
-           </li>
-           <li>
-             <div class="skill_name">
-               C++
-             </div>
-             <div class="skill_progress">
-               <span style="width: 60%;"></span>
-             </div>
-             <div class="skill_per"></div>
-           </li>
-           <li>
-            <div class="skill_name">
-              LINUX
-            </div>
-            <div class="skill_progress">
-              <span style="width: 60%;"></span>
-            </div>
-            <div class="skill_per"></div>
-          </li>
-          <li>
-            <div class="skill_name">
-              Technical English and Communication
-            </div>
-            <div class="skill_progress">
-              <span style="width: 50%;"></span>
-            </div>
-            <div class="skill_per"></div>
-          </li>
-         </ul>
-       </div>
-       <div class="resume_item resume_social">
-         <div class="title">
-           <p class="bold">Social</p>
-         </div>
-         <ul>
-           <li>
-             <div class="icon">
-               <i class="fab fa-facebook-square"></i>
-             </div>
-             <div class="data">
-               <p class="semi-bold">Facebook</p>
-               <p>NguyenChuong</p>
-             </div>
-           </li>
-           <!-- <li>
-             <div class="icon">
-               <i class="fab fa-twitter-square"></i>
-             </div>
-             <div class="data">
-               <p class="semi-bold">Twitter</p>
-               <p>NguyenChuong@twitter</p>
-             </div>
-           </li>
-           <li>
-             <div class="icon">
-               <i class="fab fa-youtube"></i>
-             </div>
-             <div class="data">
-               <p class="semi-bold">Youtube</p>
-               <p>NguyenChuong@youtube</p>
-             </div>
-           </li>
-           <li>
-             <div class="icon">
-               <i class="fab fa-linkedin"></i>
-             </div>
-             <div class="data">
-               <p class="semi-bold">Linkedin</p>
-               <p>NguyenChuong@linkedin</p>
-             </div>
-           </li> -->
-         </ul>
-       </div>
-     </div>
-  </div>
-  <div class="resume_right">
-    <div class="resume_item resume_about">
+              </div>
+            </li>
+          </ul>
+        </div>
+        <div class="resume_item resume_skills">
+          <div class="title">
+            <p class="bold">skill's</p>
+          </div>
+          <ul>
+            <li>
+              <div class="skill_name">
+                HTML
+              </div>
+              <div class="skill_progress">
+                <span style="width: 70%;"></span>
+              </div>
+              <div class="skill_per"></div>
+            </li>
+            <li>
+              <div class="skill_name">
+                CSS
+              </div>
+              <div class="skill_progress">
+                <span style="width: 60%;"></span>
+              </div>
+              <div class="skill_per"></div>
+            </li>
+            <li>
+              <div class="skill_name">
+                C#
+              </div>
+              <div class="skill_progress">
+                <span style="width: 50%;"></span>
+              </div>
+              <div class="skill_per"></div>
+            </li>
+            <li>
+              <div class="skill_name">
+                C++
+              </div>
+              <div class="skill_progress">
+                <span style="width: 60%;"></span>
+              </div>
+              <div class="skill_per"></div>
+            </li>
+            <li>
+              <div class="skill_name">
+                LINUX
+              </div>
+              <div class="skill_progress">
+                <span style="width: 60%;"></span>
+              </div>
+              <div class="skill_per"></div>
+            </li>
+            <li>
+              <div class="skill_name">
+                Technical English and Communication
+              </div>
+              <div class="skill_progress">
+                <span style="width: 50%;"></span>
+              </div>
+              <div class="skill_per"></div>
+            </li>
+          </ul>
+        </div>
+        <div class="resume_item resume_social">
+          <div class="title">
+            <p class="bold">Certificate</p>
+          </div>
+          <ul>
+            <li>
+              <!-- <div class="icon">
+                <i class="fab fa-facebook-square"></i>
+              </div> -->
+              <div class="data">
+                <p class="semi-bold">Toeic IIG</p>
+              </div>
+            </li>
+          </ul>
+        </div>
+        <div class="resume_item resume_social">
+          <div class="title">
+            <p class="bold">Social</p>
+          </div>
+          <ul>
+            <li>
+              <div class="icon">
+                <i class="fab fa-facebook-square"></i>
+              </div>
+              <div class="data">
+                <p class="semi-bold">Facebook</p>
+                <p>Nguyen Chuong</p>
+              </div>
+            </li>
+            <li>
+              <div class="icon">
+                <i class="fab fa-linkedin-in"></i>
+              </div>
+              <div class="data">
+                <p class="semi-bold">Linkedin</p>
+                <p>Chuong BeP</p>
+              </div>
+            </li>
+            <li>
+              <div class="icon">
+                <i class="fab fa-github"></i>
+              </div>
+              <div class="data">
+                <p class="semi-bold">Github</p>
+                <p>nguyenchuongbep1310</p>
+              </div>
+            </li>
+          </ul>
+        </div>
+      </div>
+    </div>
+    <div class="resume_right">
+      <div class="resume_item resume_about">
         <div class="title">
-           <p class="bold">CAREER GOAL</p>
-         </div>
-        <p class="semi-bold">I am a person who’s not afraid of failures so when I'm determined to do 
-          something I put my whole ability, responsibility and dedication to bring 
+          <p class="bold">CAREER GOAL</p>
+        </div>
+        <p class="semi-bold">I am a person who’s not afraid of failures so when I'm determined to do
+          something I put my whole ability, responsibility and dedication to bring
           the most complete results. The development of the company, the satisfaction of
           customers and the improvement of myself are my top priority in my career.
           With all my energy and my up coming experience with the company, I hope to
           reach more significant milestones in my career in the next 2 years. It is the
           motivation for me to become an expert in the field that I am pursuing and
           contribute to help the company reach newheights.</p>
-    </div>
-    <div class="resume_item resume_education">
-      <div class="title">
-           <p class="bold">Education</p>
-         </div>
-      <ul>
-            <li>
-                <!-- <div class="date">2015 - 2018</div> 
+      </div>
+      <div class="resume_item resume_education">
+        <div class="title">
+          <p class="bold">Education</p>
+        </div>
+        <ul>
+          <li>
+            <!-- <div class="date">2015 - 2018</div> 
                 <div class="info">
                      <p class="semi-bold">An Nhon 2 High School</p> 
                   <p>Graduated</p>
                 </div> -->
-            </li>
-            <li>
-              <div class="date">2018 - now</div>
-              <div class="info">
-                     <p class="semi-bold"> Ho Chi Minh University of Information Technology  </p> 
-                  <p>Sophomore <br> Major: Faculty of computer networks and communications</p>
-                </div>
-            </li>
+          </li>
+          <li>
+            <div class="date">2018 - now</div>
+            <div class="info">
+              <p class="semi-bold"> Ho Chi Minh University of Information Technology </p>
+              <p>Sophomore <br> Major: Faculty of computer networks and communications</p>
+              <br> GPA: 7.5
+            </div>
+          </li>
         </ul>
-    </div>
-    <div class="resume_item resume_work">
+      </div>
+      <div class="resume_item resume_work">
         <div class="title">
-           <p class="bold">Work Experience</p>
-         </div>
+          <p class="bold">WORK EXPERIENCE</p>
+        </div>
         <ul>
-            <li>
-                <!-- <div class="date">2022 - 2023</div>  -->
-                <div class="info">
-                  <h1>Freshman at University</h1> <br>
-                  <p class="semi-bold">- Join ICPC tournament <br> - Member of TU SACH NHAN AI 
-                  <br>- Created http://comchaudoc.com.vn/ website and my personal blog by Wordpress
-                  </p>
-                </div>
-            </li>
-            <li>
-              <!-- <div class="date">2023 - 2024</div> -->
-              <div class="info">
-                <h1>Sophomore at University </h1> <br>
-                     <p class="semi-bold">- Join  NetDev club of University of Information Technology <br> - Attend CTF WannaGame UIT  <br> - Make class projects and private projects on Github  </p>
-                </div>
-            </li>
-            <li>
-              <!-- <div class="date">2024 - Present</div> -->
-              <div class="info">
-                     <!-- <p class="semi-bold">Lorem ipsum dolor sit amet.</p>  -->
-                  <!-- <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Nostrum, voluptatibus!</p> -->
-                </div>  
-            </li>
+          <li>
+            <div class="date">10/2018 - 1/2019</div>
+            <div class="info">
+              <p class="semi-bold">- Sale staff at DIAMOND STAR JSC <br> Telemarketing, call customers about company's
+                product
+              </p>
+            </div>
+          </li>
+          <li>
+            <div class="date">3/2019 - 6/2019</div>
+            <div class="info">
+              <p class="semi-bold">- Staff at TU SACH NHAN AI <br> Manage Webpage, Fanpage and Youtube Channel
+                <br> Administrator of system sending books to schools in the country.
+              </p>
+            </div>
+          </li>
+          <li>
+            <div class="date">7/2019 - 2/2020</div>
+            <div class="info">
+              <p class="semi-bold">- Customers Service staff at Pizza 4P's Ben Thanh <br> Service and Take care
+                customers.
+              </p>
+            </div>
+          </li>
+          <li>
+            <div class="date">1/2021 - 3/2021 </div>
+            <div class="info">
+              <p class="semi-bold">- Information Technology Intern at Maico Group
+                Learn C# programing, Work with ASP.net
+              </p>
+            </div>
+          </li>
+          <li>
+            <div class="date">4/2020 - now</div>
+            <div class="info">
+              <p class="semi-bold">- Tutor and Freelancer <br> High school student tutor
+                Do graduation thesis, Create Webpage <br> (http://comchaudoc.com.vn/, http://tusachnhanai.org/, https://chuongbep.design.blog/)
+              </p>
+            </div>
+          </li>
         </ul>
-    </div>
-    
-    <div class="resume_item resume_hobby">
-      <div class="title">
-           <p class="bold">Hobby</p>
-         </div>
-       <ul>
-         <li><i class="fas fa-book"></i></li>
-         <li><i class="fas fa-gamepad"></i></li>
-         <li><i class="fas fa-music"></i></li>
-         <li><i class="fab fa-pagelines"></i></li>
-      </ul>
+      </div>
+      <div class="resume_item resume_work">
+        <div class="title">
+          <p class="bold">Activities</p>
+        </div>
+        <ul>
+          <li>
+            <!-- <div class="date">2022 - 2023</div>  -->
+            <div class="info">
+              <p class="semi-bold">- Join ICPC tournament
+              </p>
+            </div>
+          </li>
+          <li>
+            <!-- <div class="date">2023 - 2024</div> -->
+            <div class="info">
+
+              <p class="semi-bold">- Attend CTF WannaGame UIT </p>
+            </div>
+          </li>
+        </ul>
+      </div>
+
+      <div class="resume_item resume_hobby">
+        <div class="title">
+          <p class="bold">Hobby</p>
+        </div>
+        <ul>
+          <li><i class="fas fa-book"></i></li>
+          <li><i class="fas fa-gamepad"></i></li>
+          <li><i class="fas fa-music"></i></li>
+          <li><i class="fab fa-pagelines"></i></li>
+        </ul>
+      </div>
     </div>
   </div>
-</div>
 
 </body>
-</html>
 
+</html>
