--- a/index.html
+++ b/index.html
@@ -126,7 +126,7 @@
                 <i class="fab fa-facebook-square"></i>
               </div> -->
               <div class="data">
-                <p class="semi-bold">Toeic IIG</p>
+                <p class="semi-bold">Toeic IIG 765 score band</p>
               </div>
             </li>
           </ul>
@@ -136,7 +136,7 @@
             <p class="bold">Social</p>
           </div>
           <ul>
-            <li>
+            <!-- <li>
               <div class="icon">
                 <i class="fab fa-facebook-square"></i>
               </div>
@@ -144,7 +144,7 @@
                 <p class="semi-bold">Facebook</p>
                 <p>Nguyen Chuong</p>
               </div>
-            </li>
+            </li> -->
             <li>
               <div class="icon">
                 <i class="fab fa-linkedin-in"></i>
@@ -197,7 +197,7 @@
             <div class="date">2018 - now</div>
             <div class="info">
               <p class="semi-bold"> Ho Chi Minh University of Information Technology </p>
-              <p>Sophomore <br> Major: Faculty of computer networks and communications</p>
+              <p> Major: Faculty of computer networks and communications</p>
               <br> GPA: 7.5
             </div>
           </li>
@@ -209,42 +209,41 @@
         </div>
         <ul>
           <li>
-            <div class="date">10/2018 - 1/2019</div>
+            <div class="date">10/2018 - 1/2019 <br> DIAMOND STAR JSC | Sale Staff </div>
             <div class="info">
-              <p class="semi-bold">- Sale staff at DIAMOND STAR JSC <br> Telemarketing, call customers about company's
+              <p class="semi-bold">- Telemarketing, call customers about company's
                 product
               </p>
             </div>
           </li>
           <li>
-            <div class="date">3/2019 - 6/2019</div>
+            <div class="date">3/2019 - 6/2019 <br> TU SACH NHAN AI | Admin </div>
             <div class="info">
-              <p class="semi-bold">- Staff at TU SACH NHAN AI <br> Manage Webpage, Fanpage and Youtube Channel
-                <br> Administrator of system sending books to schools in the country.
+              <p class="semi-bold">- Manage Webpage, Fanpage and Youtube Channel
+                <br>- Administrator of system sending books to schools in the country.
               </p>
             </div>
           </li>
           <li>
-            <div class="date">7/2019 - 2/2020</div>
+            <div class="date">7/2019 - 2/2020 <br>  Pizza 4P's Ben Thanh | Customers Service staff </div>
             <div class="info">
-              <p class="semi-bold">- Customers Service staff at Pizza 4P's Ben Thanh <br> Service and Take care
-                customers.
+              <p class="semi-bold">- Service and Take care customers.
               </p>
             </div>
           </li>
           <li>
-            <div class="date">1/2021 - 3/2021 </div>
+            <div class="date">1/2021 - 3/2021 <br> MaiCo group| Information Technology Intern at Maico Group </div>
             <div class="info">
-              <p class="semi-bold">- Information Technology Intern at Maico Group
-                Learn C# programing, Work with ASP.net
+              <p class="semi-bold">
+                - Learn C# programing, Work with ASP.net
               </p>
             </div>
           </li>
           <li>
-            <div class="date">4/2020 - now</div>
+            <div class="date">4/2020 - now <br> High school student tutor and Freelancer </div>
             <div class="info">
-              <p class="semi-bold">- Tutor and Freelancer <br> High school student tutor
-                Do graduation thesis, Create Webpage <br> (http://comchaudoc.com.vn/, http://tusachnhanai.org/, https://chuongbep.design.blog/)
+              <p class="semi-bold">
+                - Do graduation thesis, Create Webpage <br> (http://comchaudoc.com.vn/, http://tusachnhanai.org/, https://chuongbep.design.blog/)
               </p>
             </div>
           </li>
@@ -258,7 +257,7 @@
           <li>
             <!-- <div class="date">2022 - 2023</div>  -->
             <div class="info">
-              <p class="semi-bold">- Join ICPC tournament
+              <p class="semi-bold">- Join ICPC tournament Ho Chi Minh University of Information Technology
               </p>
             </div>
           </li>
@@ -266,7 +265,7 @@
             <!-- <div class="date">2023 - 2024</div> -->
             <div class="info">
 
-              <p class="semi-bold">- Attend CTF WannaGame UIT </p>
+              <p class="semi-bold">- Attend CTF WannaGame Ho Chi Minh University of Information Technology </p>
             </div>
           </li>
         </ul>
