--- a/index.html
+++ b/index.html
@@ -209,7 +209,7 @@
         </div>
         <ul>
           <li>
-            <div class="date">10/2018 - 1/2019 <br> DIAMOND STAR JSC | Sale Staff </div>
+            <div class="date">10/2018 - 1/2019 <br> <h3>DIAMOND STAR JSC | Sale Staff</h3>  </div>
             <div class="info">
               <p class="semi-bold">- Telemarketing, call customers about company's
                 product
@@ -217,7 +217,7 @@
             </div>
           </li>
           <li>
-            <div class="date">3/2019 - 6/2019 <br> TU SACH NHAN AI | Admin </div>
+            <div class="date">3/2019 - 6/2019 <br> <h3>TU SACH NHAN AI | Administrator</h3> </div>
             <div class="info">
               <p class="semi-bold">- Manage Webpage, Fanpage and Youtube Channel
                 <br>- Administrator of system sending books to schools in the country.
@@ -225,14 +225,14 @@
             </div>
           </li>
           <li>
-            <div class="date">7/2019 - 2/2020 <br>  Pizza 4P's Ben Thanh | Customers Service staff </div>
+            <div class="date">7/2019 - 2/2020 <br> <h3>Pizza 4P's Ben Thanh | Customers Service staff</h3>  </div>
             <div class="info">
               <p class="semi-bold">- Service and Take care customers.
               </p>
             </div>
           </li>
           <li>
-            <div class="date">1/2021 - 3/2021 <br> MaiCo group| Information Technology Intern at Maico Group </div>
+            <div class="date">1/2021 - 3/2021 <br> <h3>MaiCo group| Information Technology Intern at Maico Group</h3>  </div>
             <div class="info">
               <p class="semi-bold">
                 - Learn C# programing, Work with ASP.net
@@ -240,7 +240,7 @@
             </div>
           </li>
           <li>
-            <div class="date">4/2020 - now <br> High school student tutor and Freelancer </div>
+            <div class="date">4/2020 - now <br> <h3>High school student tutor and Freelancer</h3> </div>
             <div class="info">
               <p class="semi-bold">
                 - Do graduation thesis, Create Webpage <br> (http://comchaudoc.com.vn/, http://tusachnhanai.org/, https://chuongbep.design.blog/)
